Resolves: tdf#110452 stop menubar processing Alt+foo if handled by core widget

Change-Id: I69f975d0f7a753e55f72fcd63f6580e958a80f38
Reviewed-on: https://gerrit.libreoffice.org/41884
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>